CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(DBICPP CXX C)

LINK_DIRECTORIES(lib)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules .)

FIND_PACKAGE(uuid  REQUIRED)
FIND_PACKAGE(event REQUIRED)
FIND_PACKAGE(pcre  REQUIRED)

FIND_PACKAGE(pq)
FIND_PACKAGE(mysql)

INCLUDE_DIRECTORIES(inc ${UUID_INCLUDE_DIRS} ${PCRE_INCLUDE_DIRS} ${EVENT_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PQ_INCLUDE_DIRS} ${MYSQL_INCLUDE_DIRS})

FILE(GLOB SOURCES "src/*.cc")
ADD_LIBRARY(dbic++ STATIC ${SOURCES})

SET(CMAKE_INSTALL_LIBDIR lib CACHE PATH "Output directory for libraries")

IF (PQ_INCLUDE_DIRS)
  ADD_LIBRARY(dbdpg SHARED src/drivers/pg.cc)
  TARGET_LINK_LIBRARIES(dbdpg ${PQ_LIBRARIES})
  SET_TARGET_PROPERTIES(dbdpg PROPERTIES VERSION ${CMAKE_PG_VERSION} SOVERSION 1)
  INSTALL(TARGETS dbdpg
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/dbic++
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/dbic++)
ENDIF()

IF (MYSQL_INCLUDE_DIRS)
  ADD_LIBRARY(dbdmysql SHARED src/drivers/mysql.cc)
  TARGET_LINK_LIBRARIES(dbdmysql ${MYSQL_LIBRARIES})
  SET_TARGET_PROPERTIES(dbdmysql PROPERTIES VERSION ${CMAKE_MYSQL_VERSION} SOVERSION 1)
  INSTALL(TARGETS dbdmysql
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/dbic++
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/dbic++)
ENDIF()

ADD_EXECUTABLE(demo src/examples/demo.cc)
TARGET_LINK_LIBRARIES(demo dbic++ dl ${UUID_LIBRARIES} ${PCRE_LIBRARIES} ${EVENT_LIBRARIES})

ADD_DEFINITIONS(-Wno-unused-result -Wunused-function -Wunused-value -Wunused-label -rdynamic -fPIC -O3)
ADD_DEFINITIONS(${UUID_DEFINITIONS} ${EVENT_DEFINITIONS} ${PCRE_DEFINITIONS})

# Use -DCMAKE_INSTALL_PREFIX:PATH=<path> to override /usr/local
# SET(CMAKE_INSTALL_PREFIX /usr CACHE INTERNAL "")

INSTALL(DIRECTORY DESTINATION ${CMAKE_INSTALL_LIBDIR}/dbic++)

INSTALL(TARGETS dbic++
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})

INSTALL(DIRECTORY inc/
        DESTINATION include
        FILES_MATCHING
        PATTERN "*")
