CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(DBICPP CXX C)

LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules modules)

FIND_PACKAGE(uuid  REQUIRED)
FIND_PACKAGE(event REQUIRED)
FIND_PACKAGE(pcre  REQUIRED)

FIND_PACKAGE(pq)
FIND_PACKAGE(mysql)

INCLUDE_DIRECTORIES(inc ${UUID_INCLUDE_DIRS} ${PCRE_INCLUDE_DIRS} ${EVENT_INCLUDE_DIRS})

FILE(GLOB SOURCES "src/*.cc")
ADD_LIBRARY(dbic++ STATIC ${SOURCES})

SET(CMAKE_INSTALL_LIBDIR lib CACHE PATH "Output directory for libraries")


# TODO including container.cc and error.cc is a workaround to address
#      dynamic symbol resolution problems. need to change the way linking works.

IF (PQ_FOUND)
  INCLUDE_DIRECTORIES(${PQ_INCLUDE_DIRS})
  ADD_LIBRARY(dbdpg SHARED src/drivers/pg.cc src/container.cc src/error.cc)
  IF (APPLE)
    TARGET_LINK_LIBRARIES(dbdpg dbic++ ${PQ_LIBRARIES} ${UUID_LIBRARIES} ${PCRE_LIBRARIES})
  ELSE ()
    TARGET_LINK_LIBRARIES(dbdpg ${PQ_LIBRARIES})
  ENDIF()

  SET_TARGET_PROPERTIES(dbdpg PROPERTIES VERSION ${CMAKE_PG_VERSION} SOVERSION 1)
  INSTALL(TARGETS dbdpg
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/dbic++
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/dbic++)
ENDIF()

IF (MYSQL_FOUND)
  INCLUDE_DIRECTORIES(${MYSQL_INCLUDE_DIRS})
  ADD_LIBRARY(dbdmysql SHARED src/drivers/mysql.cc src/container.cc src/error.cc)
  IF (APPLE)
    TARGET_LINK_LIBRARIES(dbdmysql dbic++ ${MYSQL_LIBRARIES} ${UUID_LIBRARIES} ${PCRE_LIBRARIES})
  ELSE()
    TARGET_LINK_LIBRARIES(dbdmysql ${MYSQL_LIBRARIES})
  ENDIF()
  SET_TARGET_PROPERTIES(dbdmysql PROPERTIES VERSION ${CMAKE_MYSQL_VERSION} SOVERSION 1)
  INSTALL(TARGETS dbdmysql
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/dbic++
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/dbic++)
ENDIF()

ADD_EXECUTABLE(demo/demo src/examples/demo.cc)
TARGET_LINK_LIBRARIES(demo/demo dbic++ dl ${UUID_LIBRARIES} ${PCRE_LIBRARIES})

ADD_EXECUTABLE(demo/async src/examples/async.cc)
TARGET_LINK_LIBRARIES(demo/async dbic++ dl ${UUID_LIBRARIES} ${PCRE_LIBRARIES} ${EVENT_LIBRARIES})

ADD_DEFINITIONS(-Wall -Wno-sign-compare -rdynamic -fopenmp -fPIC -O3)
ADD_DEFINITIONS(${UUID_DEFINITIONS} ${EVENT_DEFINITIONS} ${PCRE_DEFINITIONS})

# Use -DCMAKE_INSTALL_PREFIX:PATH=<path> to override /usr/local
# SET(CMAKE_INSTALL_PREFIX /usr CACHE INTERNAL "")

INSTALL(DIRECTORY DESTINATION ${CMAKE_INSTALL_LIBDIR}/dbic++)

INSTALL(TARGETS dbic++
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})

INSTALL(DIRECTORY inc/
        DESTINATION include
        FILES_MATCHING
        PATTERN "*.h")

IF (APPLE)
  INSTALL(FILES pkgconfig/macosx/dbic++.pc
    DESTINATION /opt/local/lib/pkgconfig)
ELSE()
  INSTALL(FILES pkgconfig/dbic++.pc
    DESTINATION lib/pkgconfig)
ENDIF()
